# WISE_Grid_Module

./: CMakeLists.txt  README.md
cpp/: .gitignore  CWFGM_Asset.Serialize.cpp  CWFGM_Asset.cpp  CWFGM_AttributeFilter.Serialize.cpp  CWFGM_AttributeFilter.cpp  CWFGM_FuelMap.Serialize.cpp  CWFGM_FuelMap.cpp  CWFGM_Grid.Serialize.cpp  CWFGM_Grid.cpp  CWFGM_LayerManager.cpp  CWFGM_PolyReplaceGridFilter.Serialize.cpp  CWFGM_PolyReplaceGridFilter.cpp  CWFGM_ReplaceGridFilter.Serialize.cpp  CWFGM_ReplaceGridFilter.cpp  CWFGM_Target.Serialize.cpp  CWFGM_Target.cpp  CWFGM_TemporalAttributeFilter.Serialize.cpp  CWFGM_TemporalAttributeFilter.cpp  CWFGM_VectorFilter.Serialize.cpp  CWFGM_VectorFilter.cpp  ICWFGM_GridEngine.cpp
include/: .gitignore  CWFGM_Asset.h  CWFGM_AttributeFilter.h  CWFGM_FuelMap.h  CWFGM_Grid.h  CWFGM_LayerManager.h  CWFGM_PolyReplaceGridFilter.h  CWFGM_ReplaceGridFilter.h  CWFGM_Target.h  CWFGM_TemporalAttributeFilter.h  CWFGM_VectorFilter.h  CWFGM_internal.h  GridCOM.h  GridCom_ext.h  ICWFGM_Asset.h  ICWFGM_GridEngine.h  ICWFGM_Target.h  ICWFGM_VectorEngine.h  ICWFGM_Weather.h  XYPoly.h  results.h
java/: .project  pom.xml  pom.xml.in
java/src/main/java/ca/wise/grid/: DFWIData.java  GETWEATHER_INTERPOLATE.java  GRID_ATTRIBUTE.java  IFWIData.java  IWXData.java
java/src/main/java/ca/wise/grid/proto/: CwfgmAsset.java  CwfgmAssetOrBuilder.java  CwfgmAttributeFilter.java  CwfgmAttributeFilterOrBuilder.java  CwfgmFilter.java  CwfgmFuelMap.java  CwfgmFuelMapOrBuilder.java  CwfgmFuelMapOuterClass.java  CwfgmGrid.java  CwfgmGridOrBuilder.java  CwfgmGridOuterClass.java  CwfgmPolyReplaceGridFilter.java  CwfgmPolyReplaceGridFilterOrBuilder.java  CwfgmReplaceGridFilter.java  CwfgmReplaceGridFilterBase.java  CwfgmReplaceGridFilterBaseOrBuilder.java  CwfgmReplaceGridFilterOrBuilder.java  CwfgmTarget.java  CwfgmTargetOrBuilder.java  CwfgmVectorFilter.java  CwfgmVectorFilterOrBuilder.java  TemporalCondition.java  TemporalConditionOrBuilder.java  wcsData.java  wcsDataOrBuilder.java  wcsDataPackage.java
proto/: cwfgmFilter.proto  cwfgmFuelMap.proto  cwfgmGrid.proto  wcsData.proto
